--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/home/jason/Documents/controlsfx-8.40.13.jar"/>
 	<classpathentry kind="output" path="out/production/Productivity_Checklist"/>
 </classpath>
